# BraveWebCrawler

./: .gitignore  DOCUMENTATION.md  README.md  brave_parallel_processing.py  brave_processor.py  brave_search.py  company_parallel_processor.py  company_processor.py  core_processing.py  google_harvester.py  google_parallel_processing.py  google_search.py  logging_utils.py  mcp-config.json  models.py  parallel_mcp_launcher.json  pw_test.py  pyproject.toml  requirements.txt  search_common.py  startpage_mcp.json  startpage_parallel_processing.py  startpage_search.py
${MCP_PLAYWRIGHT_USER_DATA_DIR}/: Local State
${MCP_PLAYWRIGHT_USER_DATA_DIR}/Default/: BrowsingTopicsState  DIPS  Favicons  History  Preferences  Secure Preferences  Top Sites  Web Data
${MCP_PLAYWRIGHT_USER_DATA_DIR}/Default/DawnGraphiteCache/: data_1  index
${MCP_PLAYWRIGHT_USER_DATA_DIR}/Default/DawnWebGPUCache/: data_1  index
${MCP_PLAYWRIGHT_USER_DATA_DIR}/Default/Extension Rules/: LOG
${MCP_PLAYWRIGHT_USER_DATA_DIR}/Default/Extension Scripts/: LOG
${MCP_PLAYWRIGHT_USER_DATA_DIR}/Default/Extension State/: LOG  LOG.old
${MCP_PLAYWRIGHT_USER_DATA_DIR}/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  index
${MCP_PLAYWRIGHT_USER_DATA_DIR}/GraphiteDawnCache/: data_1  index
${MCP_PLAYWRIGHT_USER_DATA_DIR}/ShaderCache/: data_1  index
${MCP_PLAYWRIGHT_USER_DATA_DIR}/segmentation_platform/: ukm_db
brave_search_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
input/: input.csv
tests/: test_search_common.py
(+349 files in other folders)
